--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-inline-base64",
-  "version": "2.2.1",
+  "version": "3.0.0",
   "description": "PostCSS plugin for encode the file to base64",
   "keywords": [
     "postcss",
@@ -20,40 +20,42 @@
   },
   "homepage": "https://github.com/lagden/postcss-inline-base64",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.4.0"
   },
   "scripts": {
     "report": "nyc report --reporter=html",
     "coverage": "nyc report --reporter=lcov | codecov",
     "pretest": "xo",
-    "test": "nyc ava",
-    "debug": "DEBUG=b64 npm test"
+    "test": "nyc ava --serial",
+    "debug": "DEBUG_COLORS=1 DEBUG=b64:* npm test"
   },
   "xo": {
     "esnext": true,
-    "extends": "eslint-config-postcss"
+    "extends": "eslint-config-postcss",
+    "semicolon": false,
+    "space": false,
+    "rules": {
+      "capitalized-comments": 0
+    }
   },
   "ava": {
     "concurrency": 10,
     "failFast": true
   },
   "dependencies": {
-    "debug": "2.2.0",
-    "file-type": "3.8.0",
-    "got": "6.3.0",
-    "is-svg": "2.0.1",
-    "lagden-promisify": "3.0.0",
-    "mkdirp": "0.5.1",
-    "pify": "2.3.0",
-    "postcss": "5.1.2"
+    "debug": "3.1.0",
+    "file-type": "7.5.0",
+    "got": "8.1.0",
+    "is-svg": "3.0.0",
+    "postcss": "6.0.18"
   },
   "devDependencies": {
-    "ava": "0.16.0",
-    "codecov": "1.0.1",
+    "ava": "0.25.0",
+    "codecov": "3.0.0",
     "eslint-config-postcss": "2.0.2",
-    "nyc": "8.1.0",
+    "nyc": "11.4.1",
     "rmdir": "1.2.0",
-    "xo": "0.16.0"
+    "xo": "0.20.1"
   },
   "files": [
     "index.js",
