--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-inline-base64",
-  "version": "3.0.3",
+  "version": "4.0.0",
   "description": "PostCSS plugin for encode the file to base64",
   "keywords": [
     "postcss",
@@ -23,15 +23,15 @@
     "node": ">=8.4.0"
   },
   "scripts": {
-    "report": "nyc report --reporter=html",
-    "coverage": "nyc report --reporter=lcov | codecov",
+    "report": "nyc report --reporter=lcov | codecov",
     "pretest": "xo",
-    "test": "nyc ava --serial",
-    "debug": "DEBUG_COLORS=1 DEBUG=b64:* npm test"
+    "test": "ava"
   },
   "xo": {
-    "esnext": true,
-    "extends": "eslint-config-postcss",
+    "envs": [
+      "node",
+      "es6"
+    ],
     "semicolon": false,
     "space": false,
     "rules": {
@@ -40,20 +40,16 @@
   },
   "dependencies": {
     "debug": "3.1.0",
-    "file-type": "7.5.0",
-    "got": "8.1.0",
+    "file-type": "8.1.0",
+    "got": "8.3.2",
     "is-svg": "3.0.0",
-    "p-map-series": "1.0.0",
-    "postcss": "6.0.18"
+    "p-map": "1.2.0",
+    "postcss": "7.0.1"
   },
   "devDependencies": {
-    "ajv": "5.0.0",
     "ava": "0.25.0",
-    "codecov": "3.0.0",
-    "eslint-config-postcss": "2.0.2",
-    "nyc": "11.4.1",
-    "rmdir": "1.2.0",
-    "xo": "0.20.1"
+    "nyc": "12.0.2",
+    "xo": "0.21.1"
   },
   "files": [
     "index.js",
