--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-inline-base64",
-  "version": "6.2.1",
+  "version": "7.0.0",
   "description": "PostCSS plugin for encode the file to base64",
   "keywords": [
     "postcss",
@@ -18,6 +18,7 @@
   "bugs": {
     "url": "https://github.com/lagden/postcss-inline-base64/issues"
   },
+  "type": "module",
   "main": "src/index.js",
   "files": [
     "src",
@@ -30,11 +31,12 @@
   },
   "scripts": {
     "pretest": "xo",
-    "test": "nyc --reporter=text-summary --reporter=lcov ava",
+    "test": "c8 --reporter=text --reporter=text-summary --reporter=lcov ava",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
   "xo": {
+    "ignores": ["bin/**/*.js"],
     "envs": [
       "node",
       "es6"
@@ -47,17 +49,16 @@
   },
   "dependencies": {
     "debug": "4.3.2",
-    "file-type": "16.3.0",
+    "file-type": "16.5.2",
     "got": "11.8.2",
-    "is-svg": "4.3.1",
-    "supports-color": "8.1.1"
+    "is-svg": "4.3.1"
   },
   "devDependencies": {
     "ava": "3.15.0",
-    "nyc": "15.1.0",
-    "postcss": "8.2.9",
-    "snyk": "1.528.0",
-    "xo": "0.38.2"
+    "c8": "7.8.0",
+    "postcss": "8.3.6",
+    "snyk": "1.671.0",
+    "xo": "0.42.0"
   },
   "peerDependencies": {
     "postcss": ">=8.0.0"
