--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: b64-ci
+name: Node.js CI
 
 on:
   push:
@@ -14,19 +14,25 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: npm ci
-      - run: npm test
+      - name: Install dependencies
+        run: npm ci
         env:
           CI: true
 
-      - name: Codecov
-        uses: codecov/codecov-action@v1
+      - name: Run test
+        run: npm test
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
