--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-inline-base64",
-  "version": "7.1.0",
+  "version": "7.2.0",
   "description": "PostCSS plugin for encode the file to base64",
   "keywords": [
     "postcss",
@@ -19,7 +19,7 @@
     "url": "https://github.com/lagden/postcss-inline-base64/issues"
   },
   "type": "module",
-  "main": "src/index.js",
+  "main": "dist/plugin.js",
   "files": [
     "dist",
     "src",
@@ -28,45 +28,40 @@
     "LICENSE"
   ],
   "engines": {
-    "node": ">=12.9.0"
+    "node": ">=14.17"
   },
   "scripts": {
     "rm": "rm -rf dist",
-    "pretest": "xo && npm run rm && rollup -c",
+    "eslint": "eslint --config .eslintrc.yml --ext .js --ignore-path .gitignore .",
+    "pretest": "npm run eslint",
     "test": "c8 --reporter=text --reporter=text-summary --reporter=lcov ava",
+    "esbuild": "node ./esbuild.config.js",
+    "prebuild": "npm test",
+    "build": "npm run esbuild",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
-  "xo": {
-    "ignores": [
-      "bin/**/*.js"
-    ],
-    "envs": [
-      "node",
-      "es6"
-    ],
-    "semicolon": false,
-    "space": false,
-    "rules": {
-      "capitalized-comments": 0
-    }
-  },
   "dependencies": {
-    "debug": "4.3.2",
-    "file-type": "16.5.2",
-    "got": "11.8.2",
-    "is-svg": "4.3.1"
+    "debug": "4.3.4",
+    "file-type": "17.1.1",
+    "got": "12.0.2",
+    "is-svg": "4.3.2"
   },
   "devDependencies": {
-    "ava": "3.15.0",
-    "c8": "7.8.0",
-    "postcss": "8.3.6",
-    "rollup": "2.55.1",
-    "snyk": "1.674.0",
-    "xo": "0.42.0"
+    "@babel/core": "7.17.7",
+    "@babel/eslint-parser": "7.17.0",
+    "@snyk/protect": "1.875.0",
+    "ava": "4.1.0",
+    "c8": "7.11.0",
+    "esbuild": "0.14.27",
+    "eslint": "8.11.0",
+    "eslint-config-xo": "0.40.0",
+    "eslint-plugin-unicorn": "41.0.1",
+    "postcss": "8.4.12"
   },
   "peerDependencies": {
     "postcss": ">=8.0.0"
   },
-  "snyk": true
+  "snyk": true,
+  "babel": {}
 }
