--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-inline-base64",
-  "version": "7.2.2",
+  "version": "7.3.0",
   "description": "PostCSS plugin for encode the file to base64",
   "keywords": [
     "postcss",
@@ -26,7 +26,7 @@
     },
     "./package.json": "./package.json"
   },
-  "main": "./dist/plugin-wrapper.cjs",
+  "main": "./src/plugin.js",
   "files": [
     "dist",
     "src",
@@ -53,25 +53,22 @@
   },
   "dependencies": {
     "debug": "4.3.4",
-    "file-type": "17.1.1",
-    "got": "12.0.3",
+    "file-type": "18.0.0",
+    "got": "12.5.3",
     "is-svg": "4.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.17.9",
-    "@babel/eslint-parser": "7.17.0",
-    "@snyk/protect": "1.906.0",
-    "ava": "4.2.0",
-    "c8": "7.11.0",
-    "esbuild": "0.14.36",
-    "eslint": "8.13.0",
-    "eslint-config-xo": "0.40.0",
-    "eslint-plugin-unicorn": "42.0.0",
-    "postcss": "8.4.12"
+    "@snyk/protect": "1.1076.0",
+    "ava": "5.1.0",
+    "c8": "7.12.0",
+    "esbuild": "0.16.10",
+    "eslint": "8.30.0",
+    "eslint-config-xo": "0.43.1",
+    "eslint-plugin-unicorn": "45.0.2",
+    "postcss": "8.4.20"
   },
   "peerDependencies": {
     "postcss": ">=8.0.0"
   },
-  "snyk": true,
-  "babel": {}
+  "snyk": true
 }
