--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,30 +6,31 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install pnpm
-        run: npm i -g pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 8
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
 
       - name: Run test
-        run: npm test
+        run: pnpm test
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
